aws/modules/vpc/cf_route53_test copy.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Sample Template VPC_Single_Instance_In_Subnet: Sample
  template showing how to create a VPC and add an EC2 instance with an Elastic
  IP address and a security group. **WARNING** This template creates an Amazon
  EC2 instance. You will be billed for the AWS resources used if you create a
  stack from this template.
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 110.0.0.0/24
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: 'RT_VPC'
  PriSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: "us-west-1a"
      CidrBlock: 110.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: "PriSubnet"
  PriRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PriSubnet
      RouteTableId: !Ref PriRouteTable
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '40022'
          ToPort: '40022'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3389'
          ToPort: '3389'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2073'
          ToPort: '2073'
          CidrIp: 0.0.0.0/0
  PriEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: "us-west-1a"
      # SubnetId: !Ref Subnet
      ImageId: "ami-03af6a70ccd8cb578"
      InstanceType: "t2.micro"
      #Volumes: 
      #  - Device: ''
      #    VolumeId: ''
      EbsOptimized: false
      BlockDeviceMappings:
        # Root Volume
        - DeviceName: '/dev/xvda'
          Ebs:
            # SnapshotId: 'snap-01b10d61649e94224'
            VolumeSize: 8
            VolumeType: 'gp2'
            # Iops: 1000
            Encrypted: false
            # KmsKeyId: arn:...
            DeleteOnTermination: true
      # IamInstanceProfile: IAM Name
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: 'stop'
      # KeyName: String
      Monitoring: false
      # Tenancy: 'default'    # dedicated / default / host
      NetworkInterfaces: 
        - AssociatePublicIpAddress: false
          DeleteOnTermination: true
          Description: 'Primary network interface'
          DeviceIndex: '0'
          # Ipv6AddressCount: Integer
          # Ipv6Addresses: 
          #  - InstanceIpv6Address
          # NetworkInterfaceId: String
          # PrivateIpAddress: String
          GroupSet:
            - !Ref InstanceSecurityGroup
          SubnetId: !Ref PriSubnet
      # SecurityGroupIds:
      #  - !Ref InstanceSecurityGroup
      # SecurityGroups: 
      #  - String
      # SourceDestCheck: Boolean
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            sudo useradd -G wheel sysadmin -m -u 520
            sudo echo 'koreanre12!' | passwd --stdin sysadmin
            sudo echo "sysadmin ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/90-cloud-init-users
            sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
            sudo rm /etc/localtime
            sudo ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
      Tags:
        - Key: 'Name'
          Value: 'RT_PriWeb'
...
