aws/modules/vpc/cf_securityGroup_template.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  # Security Group Template
  * For AWS CloudFormation - Security Group Template

  ## Resources
  1. Security Group - default (22,80,40022,2073)

  ## Parameter


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Security Group Configuration"
        Parameters:
          - SecurityGroupNameParam
          - VpcStackNameParam

      - Label:
          default: "Other Configuration"
        Parameters:
          - ProjInfixParam


Parameters:
  ProjInfixParam:
    Description: Infix of Resource Name
    Type: String
    Default: "y2-test"
  SecurityGroupNameParam:
    Description: Infix of Resource Name
    Type: String
    Default: "sg-"
  VpcStackNameParam:
    Description: VPC Stack Name
    Type: String

#Conditions:

Resources:
  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !ImportValue
        Fn::Sub: '${VpcStackNameParam}-VpcId'
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2073'
          ToPort: '2073'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '40022'
          ToPort: '40022'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: CloudFormationStack
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join ['', ['sg-', !Ref ProjInfixParam, '-default']]


Outputs:
  SgId:
    Description: SG ID
    Value: !Sub "${VpcStackNameParam}-SecurityGroup"
    Export:
      Name: !Sub "${AWS::StackName}-SgId"
